--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,22 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # --- OpenStreetMap Packages (No API Key Required) ---
+  # --- OpenStreetMap Packages ---
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
-  # ----------------------------------------------------
-
-  # ADD THIS PACKAGE FOR CLUSTERING
   flutter_map_marker_cluster: ^1.3.2
 
+  # --- Caching & Network for Maps ---
   flutter_map_cache: ^1.4.0
   dio: ^5.4.0
   dio_cache_interceptor: ^3.5.0
 
-  # The following adds the Cupertino Icons font to your application.
+  # --- Google Sheets Integration (NEW) ---
+  http: ^1.2.0               # To download the CSV
+  csv: ^6.0.0                # To read the CSV
+  shared_preferences: ^2.2.2 # To save data for offline use
+
+  # --- UI Icons ---
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -34,6 +37,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # Ensure your JSON data file is registered here
+  # Ensure your JSON data file is registered here as a fallback
   assets:
     - assets/lcp_data.json
