--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: training
 description: "A new Flutter project."
 publish_to: 'none' 
 
-version: 1.0.11+1 # Bumped version for the next release
+version: 1.0.12+1 # Bumped version for the next release
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -22,7 +22,7 @@ dependencies:
   restart_app: ^1.3.2        # Requires modern web dependencies
   package_info_plus: ^8.0.0  # <--- UPDATED: Fixes conflict with restart_app
   url_launcher: ^6.3.0       # <--- UPDATED: To match newer standards
-  ota_update: ^5.1.0
+  flutter_app_installer: ^1.0.2 # <-- ADD THIS (Modern installer)
 
   # --- Maps & Location ---
   flutter_map: ^6.0.0
